# computervision

./: .directory  .gitignore  CMakeLists.txt  EXEwatch.sh  README.md  output.txt  output2.txt  startup.sh  xmake.lua
.gitee/: ISSUE_TEMPLATE.zh-CN.md
Buff/: xmake.lua
Buff/include/: BuffDetector.h  BuffPictureManipulator.h  SolveAngle.h
Buff/src/: BuffDetector.cpp  BuffPictureManipulator.cpp  SolveAngle.cpp
Camera/include/: Camera.h  GxCamera.h  OrdinaryCamera.h  VirtualCamera.h
Controller/: .directory  xmake.lua
Detector/: .directory
Hero/: xmake.lua
Infantry/: xmake.lua
Infantry/Buff/: CMakeLists.txt  xmake.lua
Infantry/Buff/include/: BuffDetector.h  SolveAngle.h  buff_detect.h  header.h  solve_angle.h
Infantry/Buff/src/: BuffDetector.cpp  CMakeLists.txt  SolveAngle.cpp  buff_detect.cpp  main.cpp  solve_angle.cpp
Main/: main.cpp  xmake.lua
PictureManipulator/: xmake.lua
SerialPort/: xmake.lua
Share/: .directory  xmake.lua
include/: AngleCalculate.hpp  ArmorDetector.h  ArmorDetector.hpp  Camera.h  Controller.h  Header.h  PictureManipulator.h  RMVideoCapture.hpp  Serial.hpp  SerialPort.hpp  actions.h  config.h  for_main.h  head.h  header.h  manipulate_picture.h  prepare_camera.h  prepare_image.h  terminate_program.h
src/: AngleCalculate.cpp  ArmorDetector.cpp  CMakeLists.txt  Camera.cpp  Controller.cpp  PictureManipulator.cpp  RMVideoCapture.cpp  SentryPictureManipulator.cpp  Serial.cpp  SerialPort.cpp  actions.cpp  for_main.cpp  main.cpp  manipulate_picture.cpp  prepare_camera.cpp  prepare_image.cpp  terminate_program.cpp
(+86 files in other folders)
